--- a/blog/package.json
+++ b/blog/package.json
@@ -8,12 +8,14 @@
     "axios": "^0.21.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
+    "gatsby-plugin-image": "^0.7.1",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-source-contentful": "^4.6.1",
-    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-source-contentful": "^4.5.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
