--- a/blog/package.json
+++ b/blog/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "rebass": "^3.0.0-12",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.31.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
